// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Large 1`] = `
<button
  className="sc-jSgvzq bPNHBy"
  label="Press Me"
  onClick={[Function]}
  size={3}
>
  Press Me
</button>
`;

exports[`Storyshots Components/Button Long Label 1`] = `
<button
  className="sc-jSgvzq dYyDWv"
  label="Press MePress MPress MPress MPress MPress MPress MPress MPress M"
  onClick={[Function]}
  size={2}
>
  Press MePress MPress MPress MPress MPress MPress MPress MPress M
</button>
`;

exports[`Storyshots Components/Button Small 1`] = `
<button
  className="sc-jSgvzq bCCkbs"
  label="Press Me"
  onClick={[Function]}
  size={1}
>
  Press Me
</button>
`;

exports[`Storyshots Components/Container Asdasdasdsd 1`] = `
<div
  className="sc-gKseQn tIYkY"
>
  <h1
    className="sc-iBPTik dLNHnX"
    color="red"
    fontSize={20}
  >
    Header
  </h1>
</div>
`;

exports[`Storyshots Components/Container Many Headers In Container 1`] = `
<div
  className="sc-gKseQn tIYkY"
>
  <h1
    className="sc-iBPTik dLNHnX"
    color="red"
    fontSize={20}
  >
    Header
  </h1>
  <h1
    className="sc-iBPTik dLNHnX"
    color="red"
    fontSize={20}
  >
    Header
  </h1>
  <h1
    className="sc-iBPTik dLNHnX"
    color="red"
    fontSize={20}
  >
    Header
  </h1>
</div>
`;

exports[`Storyshots Components/DateCircle Date Circle Story 1`] = `
<div
  data-testid="date-circle"
>
  <div
    className="sc-iBPTik lnLnd"
  >
    <p>
      17
    </p>
    <p>
      DEC
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Header Asdasdasdsd 1`] = `
<div
  className="sc-gKseQn tIYkY"
>
  <h1
    className="sc-iBPTik dLNHnX"
    color="red"
    fontSize={20}
  >
    Header
  </h1>
</div>
`;

exports[`Storyshots Components/Header Container Story 1`] = `
<div
  className="sc-gKseQn tIYkY"
/>
`;

exports[`Storyshots Components/Header Header Story 1`] = `
<h1
  className="sc-fubCzh eJZML"
  color="red"
  fontSize={16}
>
  Story Header
</h1>
`;

exports[`Storyshots Components/Header Many Items 1`] = `
<div
  className="sc-gKseQn tIYkY"
>
  <h1
    className="sc-iBPTik dLNHnX"
    color="red"
    fontSize={20}
  >
    Header
  </h1>
</div>
`;
